@@ -10,6 +10,9 @@ Changes
    QwtPickerTrackerMachine added for displaying a rubberband for
    mouse moves. Enter/Leave added to events, that are handled
    by the picker machines.
+4. QwtScaleWidget::LayoutFlag added
+   Introduced to control the direction of vertical axis titles.
+   
 
 Release 5.2.0
 ===================
